<resources>
    <string name="app_name">知心天气</string>
    <string name="data_loading">数据正在加载中......</string>
    <string name="version">version 1.0.0</string>
    <string name="network_is_not_available">网络不可用!</string>
    <string name="failed_to_load_data">数据加载失败!</string>
    <string name="no_location_service">没有可用的定位服务!</string>
    <string name="search_no_location">对不起，定位失败!</string>
    <string name="error_code">错误码:</string>
    <string name="enter_city_name">请输入城市名</string>
    <string name="no_city_name">对不起，没有查询到城市名！</string>
    <string name="fl">体感温度</string>
    <string name="hum">湿度</string>
    <string name="vis">能见度</string>
    <string name="uv">紫外线指数</string>
    <string name="future_weather">未来七天预报</string>
    <string name="detail_weather">天气详细</string>
    <string name="wind_and_pressure">风速和气压</string>
    <string name="wind_speed">风速</string>
    <string name="pressure">气压</string>
    <string name="m_pa">毫巴</string>
    <string name="aqi">空气质量</string>
    <string name="unknown">未知</string>
    <string name="rain_probability">降雨概率</string>
    <string name="sun_set_rise">日出日落</string>
    <string name="sun_suggestion_1">骚年，\n别点了!!!\n洗洗睡了!!!</string>
    <string name="sun_suggestion_2">骚年，\n该午休了!!!</string>
    <string name="sun_suggestion_3">骚年，\n趁着下班赶紧嗨!!!</string>
    <string name="sun_suggestion_4">骚年，\n上班还玩手机!!!扣工资了!!!</string>
    <string name="wind_suggestion_1">用力吹气我就会转得更快，信不信？</string>
    <string name="wind_suggestion_2">被骗了吧!!!哈哈哈!!!</string>
    <string name="wind_suggestion_3">千万不要摇手机哟，骚年!!!</string>
    <string name="wind_suggestion_4">看吧!!!小风车不见了吧!!!哈哈哈!!!</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="update_time">上次更新时间:</string>
    <string name="update_no_yet">暂时未更新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新......</string>
    <string name="failed_to_refresh">刷新失败</string>
    <string name="success_to_refresh">刷新成功</string>
    <string name="edit_location">编辑地点</string>
    <string name="setting">设置</string>
    <string name="use_location">使用定位</string>
    <string name="locating_hold">正在定位，请稍候......</string>
    <string name="use_notification">通知栏天气</string>
    <string name="refresh_duration">更新间隔</string>
    <string name="no_weather">没有天气信息</string>
    <string name="weather_4_2">知心天气 (4x2)</string>
</resources>
