<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:id="@+id/left_scroll_menu">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--编辑地点-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/edit_loc"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/location_img"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/edit_location"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/location_img"
                    android:layout_marginLeft="10dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:src="@drawable/solid_line"
                    android:layout_below="@+id/location_img"/>
            </RelativeLayout>
            <com.james_jiang.weatherreport.ui.weatherInfo.ScrollListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location_list"
                android:divider="@drawable/dash_line"
                android:dividerHeight="4dp"
                android:layerType="software"/>
            <!--设置栏-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="80dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/settings"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/setting_img"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/setting"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/setting_img"
                    android:layout_marginLeft="10dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:src="@drawable/solid_line"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:layout_below="@+id/setting_img"/>
            </RelativeLayout>
            <!--使用定位-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/use_location"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/use_location_img"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/use_location"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/use_location_img"
                    android:layout_marginLeft="10dp"/>
                <ToggleButton
                    android:layout_width="51dp"
                    android:layout_height="31dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/toggle_selector"
                    android:id="@+id/use_location"
                    android:textOn=""
                    android:textOff=""
                    android:clickable="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>
            <!--使用通知栏-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/notification"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/use_notification_img"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/use_notification"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/use_notification_img"
                    android:layout_marginLeft="10dp"/>
                <ToggleButton
                    android:layout_width="51dp"
                    android:layout_height="31dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/toggle_selector"
                    android:id="@+id/use_notification"
                    android:textOn=""
                    android:textOff=""
                    android:clickable="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>
            <!--更新时间-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/refresh"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/refresh_img"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/refresh_duration"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/refresh_img"
                    android:layout_marginLeft="10dp"/>
                <Spinner
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:id="@+id/refresh_duration"
                    android:entries="@array/update_duration"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <!--版本号-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/version_layout"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/weather_small"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/edition_img"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/version"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"/>
    </RelativeLayout>
</RelativeLayout>
